[package]
name = "rumdb-wasi"
license = "MIT"
version = "0.2.4"
edition = "2021"
authors = ["Oleksandr Yermakov <olexander.yermakov@gmail.com>"]
keywords = ["database", "persistence"]
categories = ["database-implementations"]
readme = "README.md"
exclude = ["examples"]
description = "Blazing fast key-value storage basec on Bitcask whitepaper"

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
chrono-wasi = "0.4.10"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
tempdir = "0.3"
rand = "0.8.5"
